# com.github.srdgame-luars232

./: CMakeLists.txt  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml
.github/workflows/: main.yml
luars232/: CMakeLists.txt
luars232/copy_over/: CMakeLists.txt
luars232/installer/lua5.1/: install_linux.lua  luars232.xml
luars232/installer/lua5.4/: install_linux.lua  install_windows.lua  luars232.xml
luars232/patches/: 001_add_baudrates_from_termbits.diff
